--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "test project",
+  "name": "Project",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "*.git"
@@ -13,8 +10,10 @@
   "author": "Nik Babchenko",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
