--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "test project",
+  "name": "table-slider",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "*.git"
